[1.9.5-SNAPSHOT]

[1.9.4]
- Fixed for ArrayOutOfBoundsException in GridUiNavigation (thanks Dan Allen)

[1.9.3]
- Fixed crash on Android when playing sounds (thanks Dan Allen)
- Fixed entities being scheduled for interpolate/render after being removed during update
- BasicGame now implements GameResizeListener

[1.9.2]
- (#86) Fix cast exception when minimizing desktop-based games

[1.9.1]
- Fix hexagonal Tiled map rendering when tile sizes do not match hex side length

[1.9.0]
- Update to LibGDX 1.9.8
- [BREAKING] UiContainer can now select a NavigationMode instead of only enabling/disabling keyboard
- [BREAKING] Font loading split into BitmapFont and MonospaceFont
- [BREAKING] Game no longer pauses when changing to/from foreground/background. Game now pauses when minimised/restored. Toggle these settings via DesktopMini2DxConfig.
- Added SpriteSheet class
- Added GameDataSerializable interface for reading/writing binary data
- Added method to get file handles within the player data directory
- Added CustomCursor class for implementing custom cursors with up/down state
- Added Viewport implementations (Extend, Fill, Fit, Screen and Stretch)
- Added MonospaceFont, MonospaceFontCache and FontGlyphLayout for simplified font rendering
- Added method to show/hide ScrollBox scroll track
- Added support for Tiled object templates
- Added TextInputListener interface for TextBox
- Added grabInput method to TextBox
- Added support for Tiled layer groups
- Added flag to set strict Tile layer visibility state
- Improved Graphics performance by reducing spritebatch flushes
- Tilesets can now be loaded from TextureAtlas instances
- UiContainer can now have multiple navigation action keys
- Mdx.playerData now uses temp files to write before moving files to target filename
- Fixed ScrollBox not using disabled button state when thumb cannot scroll
- Fixed Graphics#tint not being reset each frame
- Fixed UI element clipping when UI animation is playing