@@ -3,7 +3,7 @@ sourceCompatibility = 1.7
 mainClassName = "org.mini2Dx.uats.desktop.DesktopUATApplication"
 project.ext.assetsDir = new File("$projectDir/../uats-android/assets");
 
-sourceSets.main.resources.srcDirs = [project.ext.assetsDir.getAbsolutePath()]
+sourceSets.main.resources.srcDirs += project.ext.assetsDir.getAbsolutePath()
 
 task launchDesktop(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
